Changelog
=========

Note that the journal serialization format has changed and you should delete
it when updating from v0.5.x.

v0.6.0:
 - Filter not-started exchanges in the operations view
 - Add a splash screen shown on application launching
 - Add quote information in order submission form
 - Add a web faucet for OKPay mock
 - Add a simple fee summary in order submission form

v0.5.2:
 - Bug fixing
   * Avoid sending repeated orders to the order book and improve handling
     or such duplications

v0.5.1:
 - Bug fixing
   * Now OKPay Mock balances are updated successfully after payments

v0.5.0:
 - Support for market-price orders
 - Support concurrent exchanges for a single order
 - New `list` command in OKPay Mock Console lists the known wallets
 - Add support to H2 database in OKPay Mock
 - Bug fixing
   * Save logging config file & log file itself in data dir specified
     with `--data-dir` command argument.

v0.4.2:
 - Bug fixing
   * Avoid self-crossing orders when clearing the order book
   * Fix a bug that caused unconfirmed outputs to be spent

v0.4.1:
 - Bug fixing
   * Fixed boundary condition when checking limit prices
   * Fixed minimum funds checking when several outputs of the same amount are
     used

v0.4.0:
 - Persist block chain headers in disk
 - Allow overriding the data path on the command line
 - [headless] Tell apart bids and asks on list command
 - [headless] Display the minimum output on status command
 - Bug fixing
   * Faster application stopping when retrying network connection
   * Fix repeated overlay id conflict resolution
   * DEB packages creates missing directories at /var
   * Fix duplicated bitcoin funds blocking on order match

v0.3.0:
 - Load logging configuration from an external file
 - Replace TomP2P overlay by a more stable overlay network
 - Bug fixing
   * Wait for connection attempts to complete before shutting down the app

v0.2.2:
 - Bug fixing
   * Fix race condition on wallet initialization